Fix further spacing issue and mobile button styling

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -55,6 +55,10 @@ body,html {
     max-height: 20px;
     font-size: 10%;
 }
+input, textarea {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+}
 @media screen and (min-width: 600px) {
     .container {
         top: 50%;
